# QrCode

./: .gitignore  CMakeLists.txt  QrCode.cpp  QrCode.hpp  dll.rc.in  version.rc
